[package]
name = "beancounter"
authors = ["Felix Bracken <crates@whiterabbit.llc>"]
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Beancounter provides a proc macro for visualizing struct memory usage."
repository = "https://github.com/whiterabbittech/beancounter"
exclude = ["/Makefile.toml", ".github/", "/.gitignore"]
